# Infantry2026_Doghole

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  README.md  STM32H723VGTx_FLASH.ld  XiaoChuanQi.ioc  控制流程说明文档.md
Core/Inc/: stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
Core/Src/: dma.c  gpio.c  main.c  stm32h7xx_it.c  tim.c  usart.c
HW-Components/: .gitignore  config.cmake
HW-Components/algorithms/controller/pid/inc/: basic_pid.hpp
HW-Components/algorithms/controller/pid/src/: basic_pid.cpp
HW-Components/algorithms/power_limiter/inc/: power_limiter.hpp
HW-Components/algorithms/power_limiter/src/: power_limiter.cpp
HW-Components/bsp/comm/inc/: receiver.hpp  rx_mgr.hpp  transmitter.hpp  tx_mgr.hpp
HW-Components/bsp/comm/src/: rx_mgr.cpp  tx_mgr.cpp
HW-Components/devices/buzzer/inc/: buzzer.hpp
HW-Components/devices/buzzer/src/: buzzer.cpp
HW-Components/devices/cap/inc/: super_cap.hpp
HW-Components/devices/cap/src/: super_cap.cpp
HW-Components/devices/dist_measure/: CMakeLists.txt
HW-Components/devices/dist_measure/inc/: STP23.hpp  dist_measure.hpp
HW-Components/devices/dist_measure/src/: STP23.cpp
HW-Components/devices/imu/inc/: imu.hpp
HW-Components/devices/imu/src/: imu.cpp
HW-Components/devices/motor/inc/: motor.hpp  motor_A1.hpp  motor_DaMiao.hpp  motor_DrEmpower.hpp  motor_GM6020.hpp  motor_GO_M8010.hpp  motor_JC2804.hpp  motor_LingKong.hpp  motor_M2006.hpp  motor_M3508.hpp  motor_M8910.hpp  motor_base.hpp
HW-Components/devices/motor/src/: motor.cpp  motor_A1.cpp  motor_DaMiao.cpp  motor_DrEmpower.cpp  motor_GM6020.cpp  motor_GO_M8010.cpp  motor_JC2804.cpp  motor_LingKong.cpp  motor_M2006.cpp  motor_M3508.cpp  motor_M8910.cpp
HW-Components/devices/referee/inc/: referee.hpp  rfr_official_pkgs.hpp
HW-Components/devices/referee/inc/rfr_pkg/: rfr_pkg_0x0003_comp_robots_hp.hpp  rfr_pkg_0x0101_team_events.hpp  rfr_pkg_0x0105_team_dart_status.hpp  rfr_pkg_0x0202_robot_power_heat.hpp  rfr_pkg_0x0204_robot_buff.hpp  rfr_pkg_0x0209_robot_rfid.hpp  rfr_pkg_0x020B_robot_ground_pos.hpp  rfr_pkg_0x020C_robot_robot_radar_mark.hpp  rfr_pkg_0x0301_inter_among_robots.hpp  rfr_pkg_0x0301_inter_radar_detection.hpp  rfr_pkg_0x0301_inter_sentry_detection.hpp  rfr_pkg_0x0307_inter_robot_traj.hpp  rfr_pkg_0x0309_inter_robot_to_ctrler.hpp
HW-Components/devices/referee/src/: referee.cpp
HW-Components/devices/remote_control/inc/: DT7.hpp  ET08A.hpp  VTM_Receiver.hpp  sbus.hpp
HW-Components/devices/remote_control/src/: DT7.cpp  ET08A.cpp  VTM_Receiver.cpp  sbus.cpp
HW-Components/devices/servo/: CMakeLists.txt
HW-Components/devices/servo/inc/: bus_servo.hpp  servo.hpp
HW-Components/devices/servo/src/: bus_servo.cpp  servo.cpp
HW-Components/devices/vision/inc/: vision.hpp
HW-Components/devices/vision/src/: vision.cpp
HW-Components/modules/inc/: feed.hpp  fric_2motor.hpp
HW-Components/modules/src/: feed.cpp  fric_2motor.cpp
HW-Components/tools/inc/: base.hpp
Instance/inc/: ins_all.hpp  ins_cap.hpp  ins_chassis_iksolver.hpp  ins_comm.hpp  ins_imu.hpp  ins_motor.hpp  ins_pid.hpp  ins_pwr_limiter.hpp  ins_rc.hpp  ins_rfr.hpp  ins_robot.hpp  ins_ui.hpp  ins_vision.hpp
Instance/src/: ins_cap.cpp  ins_chassis_iksolver.cpp  ins_comm.cpp  ins_imu.cpp  ins_motor.cpp  ins_pid.cpp  ins_pwr_limiter.cpp  ins_rc.cpp  ins_rfr.cpp  ins_robot.cpp  ins_ui.cpp  ins_vision.cpp
SentryComponents/inc/: crc.hpp  module_fsm.hpp  module_state.hpp  rfr_default_data.hpp
SentryComponents/src/: crc.cpp
SentryModules/inc/: chassis.hpp  gimbal.hpp  robot.hpp  ui_drawer.hpp
SentryModules/src/: chassis.cpp  gimbal.cpp  robot.cpp  ui_drawer.cpp
Task/inc/: comm_task.hpp  main_task.hpp
Task/src/: comm_task.cpp  main_task.cpp
USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
cmake/stm32cubemx/: CMakeLists.txt
